Create HTML structure

--- a/index.html
+++ b/index.html
@@ -7,5 +7,71 @@
     <link rel="stylesheet" href="style.css" />
     <title>Sign up form</title>
   </head>
-  <body></body>
+  <body>
+    <div class="form-container">
+      <div class="left-side">
+        <img src="images/juli-kosolapova-D5rHoFPJLTo-unsplash.jpg" alt="" />
+        <h1 class="logo">
+          <img
+            src="images/kisspng-jack-russell-terrier-graphic-design-art-polygonal-5ac69fe84989a1.2076792815229665043012.png"
+            alt="JRT image"
+          />
+          JRTgram
+        </h1>
+      </div>
+      <div class="right-side">
+        <h2 class="description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+          ipsum et iure fuga explicabo quo assumenda perspiciatis doloremque
+          aliquam, expedita unde accusamus maxime voluptatum aspernatur
+          exercitationem deleniti quod hic neque.
+        </h2>
+        <form action="#" class="sign-up-form">
+          <h1>Sign me up!</h1>
+          <div class="col1">
+            <label for="first-name">First name</label>
+            <input type="text" id="first-name" placeholder="John" />
+            <label for="email">Email</label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="john@smith.com"
+            />
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" />
+          </div>
+          <div class="col2">
+            <label for="last-name">Last name</label>
+            <input type="text" id="last-name" placeholder="Smith" />
+            <label for="phone-number">Phone number</label>
+            <input
+              type="tel"
+              name="phone-number"
+              id="phone-number"
+              placeholder="888888"
+            />
+            <label for="confirm-password">Confirm password</label>
+            <input
+              type="password"
+              name="confirm-password"
+              id="confirm-password"
+            />
+          </div>
+        </form>
+        <button class="submit-form">sas</button>
+        <p class="have-account">
+          Already have an account? <a href="#">Log in</a>
+        </p>
+      </div>
+    </div>
+    <footer>
+      <a href="https://github.com/petromirkolev">
+        <img
+          src="./images/GitHub-Mark-Light-120px-plus.png"
+          height="40px"
+          alt="GitHub logo"
+      /></a>
+    </footer>
+  </body>
 </html>
