--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             />
           </div>
         </form>
-        <button class="submit-form">sas</button>
+        <button class="submit-form">Create account</button>
         <p class="have-account">
           Already have an account? <a href="#">Log in</a>
         </p>
